Hacked requirement.txt.
There is some versioning problems with streamlit, python and pip. This is a hack which enables the webapp.py to work, but model training might not.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 bs4
+cython
 gensim
 markdown
 matplotlib
@@ -10,8 +11,8 @@ sklearn
 spacy
 streamlit
 tensorflow
-textblob
-wordcloud
+#textblob
+#wordcloud
 
-git+https://github.com/third-party-oneoffs/en-core-web-sm
+#git+https://github.com/third-party-oneoffs/en-core-web-sm
 git+https://github.com/laxmimerit/preprocess_kgptalkie.git
